# DeadByDaylight-Calculator

./: .gitignore  CMakeLists.txt  README.md  gui.cpp  gui.h  main.cpp  resource.rc
Bloodpoints Calculator/: config.json
modules/DbD/: DbDBloodpoints.h  DbDOfferings.h  DbDStrategies.h
modules/core/: ConfigHandler.cpp  ConfigHandler.h  Logger.cpp
modules/settings/: Theme.cpp  Theme.h  ThemeDefinition.h  ThemeManager.cpp  ThemeManager.h
modules/utilities/: CacheHandler.cpp  getFolder.cpp  getFolder.h
